--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,8 @@ body {
 	line-height: 17px !important;
 	letter-spacing: 1.5% !important;
 }
+
+.orderBtn:hover > .circleSpan{
+	border: 1px solid #FE5F1E;
+	transition: all 0.2s ease;
+}
